wallet insert or update
